# Gitorium

./: .bzrignore  .gitignore  CMakeLists.txt  COPYING  INSTALL.md  README.md  Workflow.md  gitorium.workspace  index.html  params.json  version.h
cmake/: Findgit2.cmake  Findlibconfig.cmake  Findlibfcgi.cmake
data/: config.cfg
doc/: gitorium-hook-admin.1  gitorium-hook-update.1  gitorium-hook.1  gitorium-hooks.1  gitorium-shell.1  gitorium.1
gitorium/: commands.c  commands.h  common.h  gitorium.cbp  gitorium.depend  gitorium.layout
gitorium-shell/: gitorium-shell.cbp  gitorium-shell.depend  gitorium-shell.layout  main.c
lib/: CMakeLists.txt  commands.c  commands.h  common.h  gitorium.c  gitorium.cbp  gitorium.h  gitorium.layout
shell/: CMakeLists.txt  gitorium-shell.cbp  shell.c
src/: common.c  common.h  config.c  config.h  error.h  gitio.c  gitio.h  perms.c  repo.c  repo.h  specific.h.cmake  upload-pack.c  upload-pack.h  version.h
src/cgi/: CMakeLists.txt  cgi.cbp  main.c  main.h
src/hook/: CMakeLists.txt  hook.cbp  main.c  main.h
src/hook-admin/: CMakeLists.txt  hook-admin.cbp  main.c  main.h  repo.c  repo.h  ssh.c  ssh.h
src/hook-post-update/: CMakeLists.txt  hook-post-update.cbp  main.c
src/hook-update/: CMakeLists.txt  hook-update.cbp  hook-update.layout  main.c
src/shell/: CMakeLists.txt  cmd_int_list.c  cmd_int_list.h  cmd_int_repo.c  cmd_int_repo.h  cmd_internal.c  gitorium-shell.layout  main.c  main.h  perms.h  shell.c  shell.cbp
